# myrtle

./: .env.example  .gitignore  .gitmodules  BUILD.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: assets-ci.yml  backend-ci.yml
assets/: .dockerignore  Dockerfile  README.md  download.sh  generate_fbs.sh  run.mjs  unpack.sh
assets/unpacker/src/: cli.rs  fb_json_auto.rs  fb_json_auto_yostar.rs  flatbuffers_decode.rs  main.rs
assets/unpacker/tests/: portrait.rs
backend/: .dockerignore  .dps-updater-state.json  .env.example  .gitignore  Cargo.toml  DPS_CALCULATOR.md  Dockerfile  Dockerfile.dev  README.md  app-directory-plan copy.md
backend/scripts/: dps_calc.py  run-dps-tools.sh
backend/src/: db_export.rs  lib.rs  main.rs
backend/src/app/: error.rs  mod.rs  server.rs  state.rs
backend/src/app/cache/: keys.rs  store.rs
backend/src/app/extractors/: auth.rs  mod.rs  pagination.rs  validated.rs
backend/src/app/routes/: assets.rs  auth.rs  dps.rs  gacha.rs  health.rs  leaderboard.rs  mod.rs  operator_notes.rs  roster.rs  search.rs  static_data.rs  stats.rs  user.rs
backend/src/app/routes/tier_lists/: crud.rs  mod.rs  permissions.rs  placements.rs  tiers.rs  versions.rs
backend/src/app/services/: auth.rs  dps.rs  gacha.rs  leaderboard.rs  mod.rs  operator_notes.rs  roster.rs  search.rs  static_data.rs  stats.rs  tier_list.rs  user.rs
backend/src/core/: asset_watcher.rs  dps_watcher.rs  mod.rs
backend/src/core/auth/: jwt.rs  permissions.rs
backend/src/core/gamedata/: assets.rs  mod.rs  tables.rs
backend/src/core/gamedata/enrich/: chibi.rs  enemies.rs  handbook.rs  mod.rs  modules.rs  operators.rs  profile.rs  skills.rs  skins.rs  voice.rs
backend/src/core/gamedata/types/: activity.rs  building.rs  chibi.rs  enemy.rs  gacha.rs  handbook.rs  material.rs  medal.rs  mod.rs  module.rs  operator.rs  range.rs  roguelike.rs  sandbox_universe.rs  serde_helpers.rs  skill.rs  skin.rs  stage.rs  stage_universe.rs  trust.rs  voice.rs  zone.rs
backend/src/core/grade/: calculate.rs  grade_medals.rs  grade_operators.rs  grade_roguelike.rs  mod.rs
backend/src/core/grade/base/: assignment.rs  buff_registry.rs  evaluate.rs  mod.rs  score.rs  types.rs
backend/src/core/grade/sandbox/: mod.rs  score.rs  types.rs
backend/src/core/grade/stages/: event.rs  mod.rs  permanent.rs  score.rs  types.rs
backend/src/core/hypergryph/: constants.rs  crypto.rs  fetch.rs  mod.rs  session.rs  yostar.rs
backend/src/core/hypergryph/loaders/: mod.rs  network.rs  version.rs
backend/src/database/: mod.rs  pool.rs
backend/src/database/migrations/: mod.rs  v001_initial.sql  v002_views.sql  v003_triggers.sql  v004_procedures.sql  v005_indexes.sql  v006_operator_notes.sql
backend/src/database/models/: audit.rs  gacha.rs  mod.rs  operator_notes.rs  roster.rs  score.rs  tier_list.rs  user.rs
backend/src/database/queries/: building.rs  gacha.rs  items.rs  medals.rs  mod.rs  operator_notes.rs  roguelike.rs  roster.rs  sandbox.rs  score.rs  stages.rs  tier_lists.rs  users.rs
backend/src/dps/: engine.rs  formulas.rs  mod.rs  operator_data.rs  operator_unit.rs
backend/src/dps/config/: operator_formulas.json
backend/src/dps/custom/: generated.rs  mod.rs
backend/src/utils/: random.rs
backend/tests/: db_integration.rs  dps_engine_test.rs
backend/tests/fixtures/: user_09525371.json
frontend/: .cta.json  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  biome.json  biome.jsonc  components.json  next.config.js  package.json  tsconfig.json  vite.config.ts
frontend/src/: env.js  router.tsx  styles.css
frontend/src/components/: Footer.tsx  Header.tsx  ThemeToggle.tsx
frontend/src/context/: accent-color-context.tsx  dps-chart-settings-context.tsx
frontend/src/lib/: auth.ts  (+14 more)
(+492 files in other folders)
