[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
hmac = "0.12.1"
jsonwebtoken = "10.3.0"
md-5 = "0.10.6"
rayon = "1.11.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
urlencoding = "2"
uuid = { version = "1.22.0", features = ["serde"] }
walkdir = "2.5.0"
