[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-dps"
path = "src/bin/generate_dps.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "grade-example"
path = "src/bin/grade_example.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
hmac = "0.12.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
md-5 = "0.10.6"
rayon = "1.11.0"
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
regex = "1.12.3"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
urlencoding = "2"
uuid = { version = "1.22.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
walkdir = "2.5.0"
